# you

./: Cargo.toml  PROJECT_STRUCTURE_AND_DESIGN.md  README.md  README_CN.md  dist-workspace.toml  objective.md  setup.sh  uninstall.sh  update.sh
.github/workflows/: release.yml
src/: agent.rs  arguments.rs  cache.rs  configurations.rs  constants.rs  helpers.rs  information.rs  lib.rs  llm.rs  main.rs  shell.rs  styles.rs  traits.rs
src/agents/: command_json.rs  command_line_explain_agent.rs  mod.rs  semi_autonomous_command_line_agent.rs  traits.rs
