[package]
name = "done-rs"
version = "0.1.0"
edition = "2024"
description = "An AI command line execution tool built with Rust"
authors =  ["Xinyu Bao <baoxinyuworks@163.com>"]
readme = "README.md"
repository = "https://github.com/aspadax/done"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
cchain = "0.3.1"
clap = { version = "4.5.31", features = ["derive"] }
