[package]
name = "eai"
version = "0.1.0"
edition = "2024"
description = "An AI command line execution tool built with Rust"
authors =  ["Xinyu Bao <baoxinyuworks@163.com>"]
readme = "README.md"
repository = "https://github.com/aspadax/done"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
async-openai = "0.28.0"
cchain = "0.3.3"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.33.1"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread"] }
